2006-10-26  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/Makefile.am (libsapwood_la_CFLAGS): Added to define G_LOG_DOMAIN

2006-06-13  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 2.24 ===

	* src/sapwood-server.c (pixbuf_open_response_destroy): Don't crash on
	NULL, it's a valid parameter when image loading fails.
	(process_buffer): Failure to load an image is not a client error, do
	not disconnect the client.
	N#32525

2006-05-12  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 2.19 ===

2006-05-10  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/theme-pixbuf.h (theme_pixbuf_render): Return FALSE when
	rendering fails for any reason
	* src/sapwood-draw.c (draw_simple_image): If rendering fails, do not
	apply window shape mask as it's most likely garbage
	* src/sapwood-render.c (pixmap_cache_value_new,
	theme_pixbuf_get_pixmap, theme_pixbuf_render): Do not exit, only warn
	and return error code, if pixmaps can not be loaded (someone removed
	the theme in use?)
	N#26863

2006-05-10  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 2.18 ===

2006-04-27  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-rc-style.c (theme_parse_image): Use g_new0 rather than
	g_malloc to make sure fields are initialized.
	* src/sapwood-pixmap.c (sapwood_pixmap_get_for_file): Initialize the
	buffer to silence valgrind.
	N#27967

2006-04-27  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (draw_focus): Use state parameter when matching
	images for focus to allow more flexible, state-dependent focus
	theming. N#23070

2006-04-24  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 2.17 ===
	
	* src/sapwood-pixmap.c(sapwood_pixmap_free): Do not unref NULL mask.
	N#27515

2006-04-12  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* === Release 2.14.1 ===

	* src/*.c: #include <config.h> to get configure settings correctly...
	Duh! N#26389
