@@ -1,5 +1,11 @@
 2006-10-26  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
+	* src/sapwood-render.c (theme_pixbuf_render): Trap X errors to avoid
+	BadAlloc when trying to allocate *huge* bitmaps (600x33000 GtkFrame
+	in a viewport) NB#35602
+
+2006-10-26  Tommi Komulainen  <tommi.komulainen@nokia.com>
+
 	* src/Makefile.am (libsapwood_la_CFLAGS): Added to define G_LOG_DOMAIN
 
 2006-06-13  Tommi Komulainen  <tommi.komulainen@nokia.com>
